nav-bar: implement hover logic for controls

Use a full I/O window for GdNavBar, so we can get notified of inferior
events meaningfully and expose a "hover" property on the widget, which
will be TRUE regardless of any sub-widget the pointer might be in.

http://bugzilla.gnome.org/show_bug.cgi?id=725369