src/lib/gd-nav-bar.h
@@ -53,6 +53,7 @@ GType            gd_nav_bar_get_type           (void) G_GNUC_CONST;
 
 GtkWidget       *gd_nav_bar_new                (EvDocumentModel *model);
 GtkWidget       *gd_nav_bar_get_button_area    (GdNavBar        *bar);
+gboolean         gd_nav_bar_get_hover          (GdNavBar        *bar);
 
 G_END_DECLS
 
